# promptlab

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/basic/: test_greeting.yaml
promptlab/: __init__.py  assertions.py  cli.py  config.py  models.py  report.py  runner.py
tests/: test_assertions.py  test_config.py  test_report.py  test_runner.py
